--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,13 @@
       <scope>provided</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.hibernate.validator</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>6.2.0.Final</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
